<resources>
    <string name="app_name">Bankai</string>

    <string-array name="data_source">
        <item>Аниме</item>
        <item>Манга</item>
        <item>Ранобэ</item>
    </string-array>
    <!--Custom searchView-->
    <string name="query_text_hint">Поиск</string>
    <!--Filters fragment-->
    <string name="fragment_filters_name">Фильтры</string>
    <string name="fragment_filters_in_user_list">В списке</string>
    <string name="fragment_filters_status">Статус</string>
    <string name="fragment_filters_anime_type">Тип</string>
    <string name="fragment_filters_duration_of_episode">Длительность эпизода</string>
    <string name="fragment_filters_watch_rating">Рейтинг просмотра</string>
    <string name="fragment_filters_button_clear">Сбросить</string>
    <string name="fragment_filters_button_apply">Применить</string>
    <string name="fragment_filters_genres">Жанры</string>
</resources>