<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/exitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:background="#00FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_close"
        app:tint="@color/green"
        tools:ignore="ContentDescription,SpeakableTextPresentCheck,TouchTargetSizeCheck,ImageContrastCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/comfortaa_regular"
        android:text="@string/fragment_filters_name"
        app:layout_constraintBottom_toBottomOf="@+id/exitButton"
        app:layout_constraintStart_toEndOf="@+id/exitButton"
        app:layout_constraintTop_toTopOf="@+id/exitButton"
        app:layout_constraintVertical_bias="0.0" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/exitButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/exitButton"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="?attr/actionBarSize" />

    <View
        android:id="@+id/divider2"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"

        app:layout_constraintBottom_toTopOf="@+id/divider9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider2"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="SpeakableTextPresentCheck">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <TextView
                android:id="@+id/userListTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/comfortaa_medium"
                android:text="@string/fragment_filters_in_user_list"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <nl.bryanderidder.themedtogglebuttongroup.ThemedToggleButtonGroup
                android:id="@+id/UserListButtonGroup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                app:flexWrap="wrap"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/userListTextView"
                app:toggle_horizontalSpacing="10dp"
                app:toggle_selectableAmount="10"
                android:paddingBottom="12dp"/>

            <View
                android:id="@+id/UserListDivider"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/UserListButtonGroup" />


            <TextView
                android:id="@+id/statusTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/comfortaa_medium"
                android:text="@string/fragment_filters_status"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/UserListDivider" />

            <nl.bryanderidder.themedtogglebuttongroup.ThemedToggleButtonGroup
                android:id="@+id/statusButtonGroup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                app:flexWrap="wrap"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/statusTextView"
                app:toggle_horizontalSpacing="10dp"
                app:toggle_selectableAmount="10"
                android:paddingBottom="12dp"/>

            <View
                android:id="@+id/statusDivider"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/statusButtonGroup" />

            <TextView
                android:id="@+id/typeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/comfortaa_medium"
                android:text="@string/fragment_filters_anime_type"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/statusDivider" />

            <nl.bryanderidder.themedtogglebuttongroup.ThemedToggleButtonGroup
                android:id="@+id/typeButtonGroup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                app:flexWrap="wrap"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/typeTextView"
                app:toggle_horizontalSpacing="10dp"
                app:toggle_selectableAmount="10"
                android:paddingBottom="12dp"/>

            <View
                android:id="@+id/typeDivider"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/typeButtonGroup" />

            <TextView
                android:id="@+id/episodeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/comfortaa_medium"
                android:text="@string/fragment_filters_duration_of_episode"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/typeDivider" />

            <nl.bryanderidder.themedtogglebuttongroup.ThemedToggleButtonGroup
                android:id="@+id/episodeButtonGroup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                app:flexWrap="wrap"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/episodeTextView"
                app:toggle_selectableAmount="10"
                android:paddingBottom="12dp">

                <nl.bryanderidder.themedtogglebuttongroup.ThemedButton
                    style="@style/FiltersThemedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:text="До 10 мин" />

                <nl.bryanderidder.themedtogglebuttongroup.ThemedButton
                    style="@style/FiltersThemedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:text="До 30 мин" />

                <nl.bryanderidder.themedtogglebuttongroup.ThemedButton
                    style="@style/FiltersThemedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:text="Более 30 мин" />

            </nl.bryanderidder.themedtogglebuttongroup.ThemedToggleButtonGroup>

            <View
                android:id="@+id/episodeDivider"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/episodeButtonGroup" />

            <TextView
                android:id="@+id/viewingRatingTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/comfortaa_medium"
                android:text="@string/fragment_filters_watch_rating"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.005"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/episodeDivider" />

            <nl.bryanderidder.themedtogglebuttongroup.ThemedToggleButtonGroup
                android:id="@+id/viewingRatingButtonGroup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                app:flexWrap="wrap"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.062"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/viewingRatingTextView"
                app:toggle_selectableAmount="10"
                android:paddingBottom="12dp">

                <nl.bryanderidder.themedtogglebuttongroup.ThemedButton
                    style="@style/FiltersThemedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:text="G" />

                <nl.bryanderidder.themedtogglebuttongroup.ThemedButton
                    style="@style/FiltersThemedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:text="PG" />

                <nl.bryanderidder.themedtogglebuttongroup.ThemedButton
                    style="@style/FiltersThemedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:text="PG-13" />

                <nl.bryanderidder.themedtogglebuttongroup.ThemedButton
                    style="@style/FiltersThemedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:text="R-17" />

                <nl.bryanderidder.themedtogglebuttongroup.ThemedButton
                    style="@style/FiltersThemedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:text="R+" />

                <nl.bryanderidder.themedtogglebuttongroup.ThemedButton
                    style="@style/FiltersThemedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:text="Rx" />

                <nl.bryanderidder.themedtogglebuttongroup.ThemedButton
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_marginTop="6dp"
                    android:text="Вышедшее"
                    app:toggle_backgroundColor="@color/opacity_green"
                    app:toggle_borderColor="@color/green"
                    app:toggle_borderWidth="1dp"
                    app:toggle_fontFamily="/fonts/comfortaa_light.ttf"
                    app:toggle_icon="@drawable/ic_horizontal_rule"
                    app:toggle_iconGravity="left|center_vertical"

                    app:toggle_iconPaddingLeft="3dp"
                    app:toggle_iconPaddingRight="64dp"
                    app:toggle_textColor="@color/green"
                    app:toggle_textGravity="right|center_vertical"
                    app:toggle_textPaddingLeft="17dp"
                    app:toggle_textSize="10dp" />

            </nl.bryanderidder.themedtogglebuttongroup.ThemedToggleButtonGroup>

            <View
                android:id="@+id/viewRatingDivider"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/viewingRatingButtonGroup" />

            <TextView
                android:id="@+id/genresTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/comfortaa_medium"
                android:text="@string/fragment_filters_genres"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.005"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/viewRatingDivider" />

            <com.google.android.material.button.MaterialButton
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="16dp"
                app:iconTint="@color/green"
                android:background="@drawable/background_circle_button"
                android:fontFamily="@font/comfortaa_light"
                android:paddingStart="5.5dp"
                app:icon="@drawable/ic_add"
                app:iconSize="10dp"
                app:layout_constraintBottom_toBottomOf="@id/genresTextView"
                app:layout_constraintLeft_toRightOf="@id/genresTextView"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

            <View
                android:id="@+id/genresDivider"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginTop="4dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/genresTextView" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <View
        android:id="@+id/divider9"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="?attr/actionBarSize" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:backgroundTint="@color/green"
        android:fontFamily="@font/comfortaa_light"
        android:text="@string/fragment_filters_button_clear"
        android:textColor="@color/white"
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="@+id/button2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button2"
        tools:ignore="SmallSp,TextContrastCheck" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/button2"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/green"
        android:fontFamily="@font/comfortaa_light"
        android:text="@string/fragment_filters_button_apply"
        android:textColor="@color/white"
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        tools:ignore="SmallSp,TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>